Change diagram generation task dependency from jar to binary