@@ -53,11 +53,10 @@ project.fileTree(dir: ontologyDir, include: '*.ttl').files.each { ttlFile ->
     def diagramArgs = ttlFile.getText().contains("top_to_bottom") ?
         ['diagram', '--direction', 'top_to_bottom', "${baseName}.ttl", imageFile] :
         ['diagram', "${baseName}.ttl", imageFile]
-    tasks.create(name: "${baseName}", type: JavaExec, dependsOn: ":cli:shadowJar") {
-        classpath = project(':cli').fileTree(dir: 'build/libs', include: '*.jar')
-        jvmArgs = ['--enable-preview']
+    def command = [project(':cli').file('build/bin/owl').getCanonicalPath()] + diagramArgs
+    tasks.create(name: "${baseName}", type: Exec, dependsOn: ":cli:nativeImage") {
+        commandLine command
         workingDir = file("${project.projectDir}/${ontologyDir}")
-        args = diagramArgs
         inputs.file file(ttlFile)
         outputs.file file(imageFile)
     }
